GNOME Bugzilla – Bug 681010
assertion `WEBKIT_IS_NETWORK_RESPONSE(response)' failed
Last modified: 2012-08-02 08:54:24 UTC
1. Open whatever bugzilla bug 2. Right-click on an attachment, save link as... 3. Cancel the file chooser, boom! ** (epiphany:20186): CRITICAL **: SoupMessage* webkit_network_response_get_message(WebKitNetworkResponse*): assertion `WEBKIT_IS_NETWORK_RESPONSE(response)' failed
Right, as theorized in bug #674291 this is just broken. I think doing what we said there makes sense.
Looking at the code, it actually looks like cancelling the dialog triggers a call to webkit_download_cancel() even when webkit_download_start() is not called at all. While starting the download before showing the dialog would probably solve this, I think this is a slightly different issue to fix.
For reference:
+ Trace 230616
Created attachment 220121 [details] [review] popup-commands: don't cancel a start that hasn't even been started Cancelling the "save link as" dialog is calling ephy_download_cancel() even when ephy_download_start() has not been called. This causes a critical warning in webkit.
s/start/download :)
Review of attachment 220121 [details] [review]: OK, but we should really do the other thing :)
One step at the time!! :)