popup-commands: don't cancel a download that hasn't even been started

Cancelling the "save link as" dialog is calling ephy_download_cancel()
even when ephy_download_start() has not been called. This causes a
critical warning in webkit.

https://bugzilla.gnome.org/show_bug.cgi?id=681010